add publication content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,10 @@
   url: "/"
   side: left
 
+- title: Publications
+  url: "/publication/"
+  side: left
+
 # - title: Blog
 #   url: "/blog/"
 #   side: left
