--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,10 @@
   url: "/teaching/"
   side: left
 
+- title: "CV & Contact"
+  url: "/cv/"
+  side: left
+
 # - title: Blog
 #   url: "/blog/"
 #   side: left
